--- a/cdi/pom.xml
+++ b/cdi/pom.xml
@@ -60,29 +60,6 @@
         </dependency>
 
         <dependency>
-            <!-- JSF ?!?! -->
-            <groupId>javax.faces</groupId>
-            <artifactId>javax.faces-api</artifactId>
-            <version>2.3</version>
-        </dependency>
-
-        <dependency>
-            <!-- Apache Commons Lang -->
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.deltaspike.core</groupId>
-            <artifactId>deltaspike-core-api</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.deltaspike.core</groupId>
-            <artifactId>deltaspike-core-impl</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jul-to-slf4j</artifactId>
             <scope>test</scope>
@@ -116,18 +93,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
+            <!-- Arquillian for JUnit 5 engine -->
             <groupId>org.jboss.arquillian.junit5</groupId>
             <artifactId>arquillian-junit5-container</artifactId>
             <scope>test</scope>
@@ -161,6 +127,14 @@
                     <scope>test</scope>
                 </dependency>
                 <dependency>
+                    <!-- Deltaspike is needed by Arquillian/Weld -->
+                    <groupId>org.apache.deltaspike.core</groupId>
+                    <artifactId>deltaspike-core-impl</artifactId>
+                    <!-- it's only used in tests but `test` scope brakes container initialization -->
+                    <scope>runtime</scope>
+                </dependency>
+                <dependency>
+                    <!-- Hamcrest is needed by Arquillian/Weld -->
                     <groupId>org.hamcrest</groupId>
                     <artifactId>hamcrest-all</artifactId>
                     <scope>test</scope>
