--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
     <modules>
         <module>cdi</module>
         <module>axon-cdi-ext-jakarta</module>
+        <module>axon-cdi-jakarta</module>
         <module>example</module>
         <module>extension-cdi-parent</module>
     </modules>
